# local_mb64

./: .gitignore  .gitmodules  Cargo.toml  README.md  c.json  code.json  f.json  games.json  install.sh  lvl.json
.github/scripts/: package-macos.sh
.github/workflows/: release.yml
app/: CMakeLists.txt  aspMain.us.toml  mb64.us.toml
app/.github/macos/: apple_bundle.cmake
app/include/: mb64_audio.h  mb64_input.h  mb64_render.h
app/src/: mb64_audio.cpp  mb64_input.cpp  mb64_main.cpp  mb64_overlays.cpp  mb64_render.cpp  mb64_sdcard.cpp  mb64_si.cpp  mb64_ultra_stubs.cpp
docs/: ARCHITECTURE.md  BUILD.md  HANDOFF.md  LEGAL.md
launcher/: Cargo.toml  build.rs
launcher/assets/: AppIcon.icns
launcher/src/: app.css  browse.rs  main.rs
launcher/src/core/: bootstrap.rs  build.rs  game.rs  levels.rs  mod.rs  paths.rs  rom.rs  sdcard.rs  settings.rs
patches/: Mario-Builder-64-ipa-clone-cflags.patch  N64ModernRuntime-preemption.patch  clang-math_util-fp-asm.patch
patches/recompiled-overrides/: MANIFEST  README.md  cart_card_init.c  cart_card_rd_dram.c  cart_card_wr_dram.c  cart_init.c  detect_emulator.c  osContGetReadDataEx.c
recomp/: mb64.us.toml
tools/: insert_preempt.py
tools/mb64-build/: Cargo.toml
tools/mb64-build/src/: main.rs
