[package]
name = "mb64-launcher"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Dioxus launcher for the Mario Builder 64 macOS native port"

[[bin]]
name = "mb64-launcher"
path = "src/main.rs"

[dependencies]
# Desktop GUI. Dioxus 0.7's desktop renderer is WebView-based (wry/tao); on macOS
# it uses WKWebView, so no GTK is needed. Plain `cargo run` works — `dx` (dioxus-cli)
# is only required for `dx serve` (hot reload) and `dx bundle` (the .app, milestone M5).
dioxus = { version = "0.7", features = ["desktop"] }

# Native macOS file dialog for picking the ROM (async, runs on the main thread).
rfd = "0.17"

# Settings persistence.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ROM verification: librecomp validates the provisioned ROM with XXH3_64bits over the
# (4-byte-padded, byteswap-normalized) ROM and compares to the GameEntry.rom_hash. We
# replicate that here so the launcher's "valid ROM" verdict matches the game's exactly.
xxhash-rust = { version = "0.8", features = ["xxh3"] }

anyhow = "1"

# Runtime-agnostic timer for the child-process poll loop (works on whatever
# executor Dioxus runs our futures on — no tokio reactor assumption).
futures-timer = "3"

# SIGTERM the game on Stop (std's Child::kill is SIGKILL; SIGTERM lets the game's
# SDL_QUIT handler flush + quick_exit cleanly).
libc = "0.2"
