[package]
name = "mb64-launcher"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Dioxus launcher for the Mario Builder 64 macOS native port"

[[bin]]
name = "mb64-launcher"
path = "src/main.rs"

[dependencies]
# Desktop GUI. Dioxus 0.7's desktop renderer is WebView-based (wry/tao); on macOS
# it uses WKWebView, so no GTK is needed. Plain `cargo run` works — `dx` (dioxus-cli)
# is only required for `dx serve` (hot reload) and `dx bundle` (the .app, milestone M5).
dioxus = { version = "0.7", features = ["desktop"] }

# Native macOS file dialog for picking the ROM (async, runs on the main thread).
rfd = "0.17"

# Settings persistence.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Embed the launcher logo as a data URI in the WebView (the desktop renderer has
# no asset pipeline under plain `cargo run`, and we don't ship `dx`). Already in
# the tree transitively, so this adds no new download.
base64 = "0.22"

# ROM verification: librecomp validates the provisioned ROM with XXH3_64bits over the
# (4-byte-padded, byteswap-normalized) ROM and compares to the GameEntry.rom_hash. We
# replicate that here so the launcher's "valid ROM" verdict matches the game's exactly.
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Base-ROM verification: the decomp extracts assets from exactly the US SM64 ROM,
# identified by SHA-1 (same check as `mb64-build doctor`).
sha1 = "0.10"

anyhow = "1"

# Runtime-agnostic timer for the child-process poll loop (works on whatever
# executor Dioxus runs our futures on — no tokio reactor assumption).
futures-timer = "3"

# SIGTERM the game on Stop (std's Child::kill is SIGKILL; SIGTERM lets the game's
# SDL_QUIT handler flush + quick_exit cleanly).
libc = "0.2"

# Browse + download community levels from LevelShareSquare (its public JSON API).
# rustls (already in the tree via Dioxus) keeps us off an OpenSSL/native-tls build
# dependency; default features are off so we don't pull native-tls.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Inject downloaded .mb64 levels into the game's FAT16 virtual SD card image
# (mb64_sd.img) so they appear in the in-game level browser. Default features give
# us std + long-filename support (the levels dir + level names need LFN).
fatfs = "0.3"

[dev-dependencies]
# Drive the async LSS client in the (opt-in, network) `live_api` test under the
# same runtime kind Dioxus desktop uses.
tokio = { version = "1", features = ["rt", "macros"] }
