[package]
name = "mb64-build"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Build orchestrator for the Mario Builder 64 macOS native port"

[[bin]]
name = "mb64-build"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
sha1 = "0.10"
